
2004/07/04: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- base/args: GWEN_Args_Check is now able to return a new code which flags
  that the user wanted help. This circumstance is detected by a new flag
  (GWEN_ARGS_FLAGS_HELP).
- crypt/padd: removed usage of a deprecated function (so that the annoying
  warning in OpenHBCI2/AqHBCI vanishes)


===========================================================================
MARK: released gwenhywfar-0.9.12 (2004/07/03)
===========================================================================


2004/07/03: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- some more fixes, prepared release


2004/07/02: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- tools: added "dlgtest", a tool which allows testing a dialog.
- ui: fixed a bug in MessageBox


2004/07/01: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ui:
  - added a new widget type: "HLine". This widget simply draws a horizontal
    line or serves as a placeholder (to be used with the DialogLoader).
  - finished GWEN_UILoader. It is now able to automatically arrange widgets,
    to populate created widgets with user data and to retrieve the data
    modified by the user. It is now usable with Libchipcard2 ;-)
    See doc/testdialog.xml for an example. You can try this with the
    following gwentest-command (from within the "test" folder):
    "#> gwentest u20 ../doc/testdialog.xml"
    

2004/06/30: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ui:
  - widget loader can now setup a complete dialog (including HTML help
    texts etc).
  - started working on a function whcih populates the dialog widgets with
    values. The next step will be to retrieve and validate data entered by
    the user.


2004/06/29: Martin Preuss<martin@libchipcard.de>