@@ -18,7 +18,7 @@ AC_CONFIG_HEADER([config.h])
 GWENHYWFAR_VERSION_MAJOR=0
 GWENHYWFAR_VERSION_MINOR=9
 GWENHYWFAR_VERSION_PATCHLEVEL=12
-GWENHYWFAR_VERSION_BUILD=1
+GWENHYWFAR_VERSION_BUILD=2
 dnl "stable", "rcX", "betaX", "cvs"
 GWENHYWFAR_VERSION_TAG="cvs"
 GWENHYWFAR_VERSION_FULL_STRING="$GWENHYWFAR_VERSION_MAJOR.$GWENHYWFAR_VERSION_MINOR.$GWENHYWFAR_VERSION_PATCHLEVEL.$GWENHYWFAR_VERSION_BUILD${GWENHYWFAR_VERSION_TAG}"
@@ -115,7 +115,7 @@ AC_CHECK_HEADERS([syslog.h unistd.h])
 AC_CHECK_HEADERS([unistd.h])
 AC_CHECK_HEADERS([dlfcn.h])
 AC_CHECK_HEADERS([signal.h])
-AC_CHECK_HEADERS([time.h])
+AC_CHECK_HEADERS([time.h locale.h])
 AC_CHECK_HEADERS([syslog.h])
 AC_CHECK_HEADERS([sys/stat.h])
 AC_CHECK_HEADERS([sys/types.h])
@@ -136,7 +136,7 @@ AC_CHECK_FUNCS([memmove memset])
 AC_CHECK_FUNCS([select socket])
 AC_CHECK_FUNCS([strcasecmp strchr strdup strerror])
 AC_CHECK_FUNCS([snprintf])
-AC_CHECK_FUNCS([symlink])
+AC_CHECK_FUNCS([symlink setlocale])
 
 dnl prefix handling
 AC_PREFIX_DEFAULT(/usr)
