@@ -36,7 +36,7 @@
 #include <time.h>
 #include <errno.h>
 #include <string.h>
-
+#include <ctype.h>
 
 
 GWEN_TIME *GWEN_CurrentTime(){
@@ -51,6 +51,17 @@ GWEN_TIME *GWEN_CurrentTime(){
   }
 
   return t;
+}
+
+
+
+GWEN_TIME *GWEN_Time_dup(const GWEN_TIME *t){
+  GWEN_TIME *newT;
+
+  assert(t);
+  GWEN_NEW_OBJECT(GWEN_TIME, newT);
+  memmove(&newT->tv, &t->tv, sizeof(newT->tv));
+  return newT;
 }
 
 
@@ -128,6 +139,119 @@ int GWEN_Time_GetBrokenDownDate(const GWEN_TIME *t,
   *year=tb->tm_year+1900;
   return 0;
 }
+
+
+
+GWEN_TIME *GWEN_Time_fromString(const char *s, const char *tmpl){
+  int year, month, day;
+  int hour, min, sec;
+  const char *p;
+  const char *t;
+  GWEN_TIME *gwt;
+  time_t tt;
+  struct tm ti;
+  struct tm *tp;
+
+  assert(s);
+  assert(tmpl);
+  year=month=day=0;
+  hour=min=sec=0;
+
+  p=s;
+  t=tmpl;
+  while(*t && *p) {
+    int i;
+
+    if (isdigit(*p))
+      i=(*p)-'0';
+    else
+      i=-1;
+
+    switch(*t) {
+    case 'Y':
+      if (i==-1)
+	return 0;
+      year*=10;
+      year+=i;
+      break;
+    case 'M':
+      if (i==-1)
+	return 0;
+      month*=10;
+      month+=i;
+      break;
+    case 'D':
+      if (i==-1)
+	return 0;
+      day*=10;
+      day+=i;
+      break;
+    case 'h':
+      if (i==-1)
+	return 0;
+      hour*=10;
+      hour+=i;
+      break;
+    case 'm':
+      if (i==-1)
+	return 0;
+      min*=10;
+      min+=i;
+      break;
+    case 's':
+      if (i==-1)
+	return 0;
+      sec*=10;
+      sec+=i;
+      break;
+    default:
+      DBG_DEBUG(0,
+		"Unknown character in template, will skip in both strings");
+      break;
+    }
+    t++;
+    p++;
+  } /* while */
+
+  tt=time(0);
+  tp=localtime(&tt);
+  assert(tp);
+  memmove(&ti, tp, sizeof(ti));
+  ti.tm_sec=sec;
+  ti.tm_min=min;
+  ti.tm_hour=hour;
+  if (year<100) {
+    if (year<72)
+      year+=2000;
+    year+=1900;
+  }
+  ti.tm_year=year-1900;
+  ti.tm_mon=month-1;
+  ti.tm_mday=day;
+  ti.tm_yday=0;
+  ti.tm_wday=0;
+  tt=mktime(&ti);
+  assert(tt!=-1);
+
+  GWEN_NEW_OBJECT(GWEN_TIME, gwt);
+  gwt->tv.tv_sec=tt;
+  gwt->tv.tv_usec=0;
+  return gwt;
+}
+
+
+
+GWENHYWFAR_API GWEN_TIME *GWEN_Time_fromSeconds(GWEN_TYPE_UINT32 s){
+  GWEN_TIME *t;
+
+  GWEN_NEW_OBJECT(GWEN_TIME, t);
+  t->tv.tv_sec=s;
+  t->tv.tv_usec=0;
+  return t;
+}
+
+
+
 
 
 
